Added some skeletons for cuda LR

--- a/src/cuda/logisticRegression/CMakeLists.txt
+++ b/src/cuda/logisticRegression/CMakeLists.txt
@@ -1,7 +1,3 @@
-add_subdirectory(transfer)
-add_subdirectory(kernels)
-add_subdirectory(logisticRegression)
-
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
@@ -15,7 +11,7 @@ set(SOURCE
 
 set(GPU_SOURCE
   ${GPU_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/CudaAdapter.cu
-  ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapper.cu
+  ${CMAKE_CURRENT_SOURCE_DIR}/LogisticRegressionConfiguration.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/LogisticRegression.h
   PARENT_SCOPE
 )
