--- a/test/mocks/CMakeLists.txt
+++ b/test/mocks/CMakeLists.txt
@@ -4,8 +4,15 @@ set(TEST_INCLUDE_DIRECTORIES
   PARENT_SCOPE
 )
 
+if(NOT ${CPU})
+set(GPU_LOCAL_SOURCE
+  ${CMAKE_CURRENT_SOURCE_DIR}/HostToDeviceMock.h
+)
+endif(NOT ${CPU})
+
 set(TEST_SOURCE
   ${TEST_SOURCE}
+  ${GPU_LOCAL_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandlerMock.h
   ${CMAKE_CURRENT_SOURCE_DIR}/ConfigurationMock.h
   PARENT_SCOPE
