--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(mocks)
 add_subdirectory(data)
 add_subdirectory(container)
 add_subdirectory(fileIO)
+add_subdirectory(statistics)
 
 if(${CPU})
 
