Implemented the rests of statistics

--- a/test/statistics/CMakeLists.txt
+++ b/test/statistics/CMakeLists.txt
@@ -6,6 +6,6 @@ set(TEST_INCLUDE_DIRECTORIES
 
 set(TEST_SOURCE
   ${TEST_SOURCE}
-  #${CMAKE_CURRENT_SOURCE_DIR}/StatisticsTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/StatisticsTest.cpp
   PARENT_SCOPE
 )
