--- a/src/container/data/CMakeLists.txt
+++ b/src/container/data/CMakeLists.txt
@@ -6,7 +6,9 @@ set(INCLUDE_DIRECTORIES
 
 set(SOURCE
   ${SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentVector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SNPVector.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/InteractionVector.cpp
   PARENT_SCOPE
 )
 
