--- a/src/statistics/model/CMakeLists.txt
+++ b/src/statistics/model/CMakeLists.txt
@@ -1,14 +1,19 @@
+add_subdirectory(logisticRegression)
+
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
   PARENT_SCOPE
 )
 
-set(SOURCE
-  ${SOURCE}
-  ${CPU_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/LogisticRegression.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/MultipleLogisticRegression.cpp
+set(GPU_SOURCE
+  ${GPU_SOURCE}
   PARENT_SCOPE
 )
 
+set(SOURCE
+  ${SOURCE}
+  ${CPU_SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelHandler.cpp
+  PARENT_SCOPE
+)
