--- a/src/statistics/model/logisticRegression/serial/CMakeLists.txt
+++ b/src/statistics/model/logisticRegression/serial/CMakeLists.txt
@@ -1,21 +1,13 @@
-add_subdirectory(model)
-
 set(INCLUDE_DIRECTORIES
   ${INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
   PARENT_SCOPE
 )
 
-set(GPU_SOURCE
-  ${GPU_SOURCE}
-  PARENT_SCOPE
-)
-
-
 set(SOURCE
   ${SOURCE}
-  ${CPU_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/Statistics.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/LogisticRegression.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/MultipleLogisticRegression.cpp
   PARENT_SCOPE
 )
 
