Restructured major parts of file readers. Removed PlinkReader and Factory. Changed all get X to read X. Moved all reading to the getters instead of the constructor. Some changed signtatures due to this. Added new handlers and containers for some of the data. Added new exception for EnvironmentFactorHandler.

--- a/src/statistics/model/CMakeLists.txt
+++ b/src/statistics/model/CMakeLists.txt
@@ -14,6 +14,6 @@ set(GPU_SOURCE
 set(SOURCE
   ${SOURCE}
   ${CPU_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/ModelHandler.cpp
+  #${CMAKE_CURRENT_SOURCE_DIR}/ModelHandler.cpp
   PARENT_SCOPE
 )
