--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -13,6 +13,7 @@ set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/Person.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactor.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/DataHandler.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandler.cpp
+  #${CMAKE_CURRENT_SOURCE_DIR}/DataHandler.cpp
   PARENT_SCOPE
 )
