--- a/test/data/CMakeLists.txt
+++ b/test/data/CMakeLists.txt
@@ -10,5 +10,7 @@ set(TEST_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/PersonTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/IdTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SNPTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandlerTest.cpp
   PARENT_SCOPE
 )
