Added test for InterationVector. Added mocks for SNPVector and EnvironmentVector. Added helpers to construct these mocks. Fixed error in Configuration.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(data)
 add_subdirectory(container)
 add_subdirectory(fileIO)
 add_subdirectory(statistics)
+add_subdirectory(task)
 
 if(${CPU})
 
