--- a/test/container/CMakeLists.txt
+++ b/test/container/CMakeLists.txt
@@ -1,3 +1,5 @@
+add_subdirectory(data)
+
 set(TEST_INCLUDE_DIRECTORIES
   ${TEST_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
@@ -22,6 +24,5 @@ set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CPU_SOURCE}
   ${GPU_LOCAL_SOURCE}
-  ${CMAKE_CURRENT_SOURCE_DIR}/SNPVectorTest.cpp
   PARENT_SCOPE
 )
