Fixed LR config test. Added Gpu and Cpu modelhandler. Implemented more parts of DataHandler

--- a/src/statistics/model/CMakeLists.txt
+++ b/src/statistics/model/CMakeLists.txt
@@ -6,14 +6,21 @@ set(INCLUDE_DIRECTORIES
   PARENT_SCOPE
 )
 
-set(GPU_SOURCE
-  ${GPU_SOURCE}
-  PARENT_SCOPE
-)
+if(${CPU})
+  set(CPU_SOURCE
+    #${CMAKE_CURRENT_SOURCE_DIR}/CpuModelHandler.cpp
+  )
+else()
+  set(GPU_SOURCE
+    ${GPU_SOURCE}
+    ${CMAKE_CURRENT_SOURCE_DIR}/GpuModelHandler.cpp
+    PARENT_SCOPE
+  )
+endif()
 
 set(SOURCE
   ${SOURCE}
   ${CPU_SOURCE}
-  #${CMAKE_CURRENT_SOURCE_DIR}/ModelHandler.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/ModelHandler.cpp
   PARENT_SCOPE
 )
