Added test for LR

--- a/test/statistics/model/CMakeLists.txt
+++ b/test/statistics/model/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TEST_INCLUDE_DIRECTORIES
 if(NOT ${CPU})
   set(GPU_TEST_SOURCE
     ${CMAKE_CURRENT_SOURCE_DIR}/LogisticRegressionConfigurationTest.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/LogisticRegressionTest.cpp
   )
 endif(NOT ${CPU})
 
