--- a/test/statistics/model/CMakeLists.txt
+++ b/test/statistics/model/CMakeLists.txt
@@ -1,18 +1,24 @@
+add_subdirectory(logisticRegression)
+
 set(TEST_INCLUDE_DIRECTORIES
   ${TEST_INCLUDE_DIRECTORIES}
   ${CMAKE_CURRENT_SOURCE_DIR}
   PARENT_SCOPE
 )
 
-if(NOT ${CPU})
-  set(GPU_TEST_SOURCE
-    ${CMAKE_CURRENT_SOURCE_DIR}/LogisticRegressionConfigurationTest.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/LogisticRegressionTest.cpp
+if(${CPU})
+  set(CPU_TEST_SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/CpuModelHandlerTest.cpp
   )
-endif(NOT ${CPU})
+else()
+  set(GPU_TEST_SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/GpuModelHandlerTest.cpp
+  )
+endif(${CPU})
 
 set(TEST_SOURCE
   ${TEST_SOURCE}
   ${GPU_TEST_SOURCE}
+  ${CPU_TEST_SOURCE}
   PARENT_SCOPE
 )
