--- a/test/cuda/CMakeLists.txt
+++ b/test/cuda/CMakeLists.txt
@@ -11,5 +11,6 @@ set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaAdapterTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/TransferTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapperTest.cpp
   PARENT_SCOPE
 )
