Added factory for SNPVector. Moved calculations for allele realted things to it. Changed Statistics to take LR result pointer for constructor. Added a new constructor to SNPVector that creates a SNPVector that only holds the allele frequencies but not the data itself. Moved the allele frequencies data to SNPVector instead of SNP.

--- a/test/container/data/CMakeLists.txt
+++ b/test/container/data/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TEST_INCLUDE_DIRECTORIES
 set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/SNPVectorTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/SNPVectorFactoryTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/InteractionVectorTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentVectorTest.cpp
   PARENT_SCOPE
