--- a/src/container/data/CMakeLists.txt
+++ b/src/container/data/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentVector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/SNPVector.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/SNPVectorFactory.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/InteractionVector.cpp
   PARENT_SCOPE
 )
