--- a/test/task/CMakeLists.txt
+++ b/test/task/CMakeLists.txt
@@ -8,5 +8,6 @@ set(TEST_INCLUDE_DIRECTORIES
 set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/DataQueueTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/DataQueueThreadTest.cpp
   PARENT_SCOPE
 )
