--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_subdirectory(exception)
 add_subdirectory(data)
 add_subdirectory(container)
-add_subdirectory(programOptions)
+add_subdirectory(configuration)
 add_subdirectory(fileIO)
+add_subdirectory(model)
 add_subdirectory(statistics)
 add_subdirectory(task)
 
