Added DataHandlerFactory. Removed device symbols

--- a/src/data/CMakeLists.txt
+++ b/src/data/CMakeLists.txt
@@ -15,5 +15,6 @@ set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactor.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/EnvironmentFactorHandler.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/DataHandler.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/DataHandlerFactory.cpp
   PARENT_SCOPE
 )
