--- a/src/cuda/CMakeLists.txt
+++ b/src/cuda/CMakeLists.txt
@@ -16,5 +16,7 @@ set(GPU_SOURCE
   ${GPU_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaAdapter.cu
   ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapper.cu
+  ${CMAKE_CURRENT_SOURCE_DIR}/Device.cu
+  #${CMAKE_CURRENT_SOURCE_DIR}/Stream.cu
   PARENT_SCOPE
 )
