Added test for BedReader thread reading

--- a/test/fileIO/plink/CMakeLists.txt
+++ b/test/fileIO/plink/CMakeLists.txt
@@ -7,6 +7,7 @@ set(TEST_INCLUDE_DIRECTORIES
 set(TEST_SOURCE
   ${TEST_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/BimReaderTest.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/BedReaderThreadIntegrationTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/FamReaderTest.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/BedReaderTest.cpp
   PARENT_SCOPE
