Added Stream and factory for it. Added outcomes to Device. Added mocks and tests for them

--- a/src/cuda/CMakeLists.txt
+++ b/src/cuda/CMakeLists.txt
@@ -17,6 +17,6 @@ set(GPU_SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaAdapter.cu
   ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapper.cu
   ${CMAKE_CURRENT_SOURCE_DIR}/Device.cu
-  #${CMAKE_CURRENT_SOURCE_DIR}/Stream.cu
+  ${CMAKE_CURRENT_SOURCE_DIR}/Stream.cu
   PARENT_SCOPE
 )
