Added start for threading

--- a/src/task/CMakeLists.txt
+++ b/src/task/CMakeLists.txt
@@ -8,5 +8,6 @@ set(INCLUDE_DIRECTORIES
 set(SOURCE
   ${SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/DataQueue.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/GPUWorkerThread.cpp
   PARENT_SCOPE
 )
