Fixed a bunch of errors

--- a/src/cuda/CMakeLists.txt
+++ b/src/cuda/CMakeLists.txt
@@ -12,6 +12,7 @@ if(NOT ${CPU})
     ${CMAKE_CURRENT_SOURCE_DIR}/Device.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Stream.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/StreamFactory.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapperFactory.cpp
   )
 endif()
 
