--- a/src/container/CMakeLists.txt
+++ b/src/container/CMakeLists.txt
@@ -8,20 +8,15 @@ set(INCLUDE_DIRECTORIES
 
 if(${CPU})
   set(CPU_SOURCE
-    ${CMAKE_CURRENT_SOURCE_DIR}/HostVector.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostVector.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/LapackppHostMatrix.cpp
   )
 else()
-  set(GPU_SOURCE
-    ${GPU_SOURCE}
-    ${CMAKE_CURRENT_SOURCE_DIR}/HostVector.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostVector.cu
-    ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostMatrix.cu
-    ${CMAKE_CURRENT_SOURCE_DIR}/DeviceVector.cu
-    ${CMAKE_CURRENT_SOURCE_DIR}/DeviceMatrix.cu
+  set(GPU_LOCAL_SOURCE
+    ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostVector.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/PinnedHostMatrix.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/DeviceVector.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/DeviceMatrix.cpp
     PARENT_SCOPE
   )
 endif(${CPU})
@@ -29,6 +24,9 @@ endif(${CPU})
 set(SOURCE
   ${SOURCE}
   ${CPU_SOURCE}
+  ${GPU_LOCAL_SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/HostVector.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/HostMatrix.cpp
   PARENT_SCOPE
 )
 
