--- a/src/cuda/CMakeLists.txt
+++ b/src/cuda/CMakeLists.txt
@@ -8,23 +8,23 @@ set(INCLUDE_DIRECTORIES
 )
 
 if(NOT ${CPU})
-  set(GPU_LOCAL_SOURCE
+  set(GPU_SOURCE
+    ${GPU_SOURCE}
     ${CMAKE_CURRENT_SOURCE_DIR}/Device.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Stream.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/StreamFactory.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapperFactory.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapperFactory.cpp
   )
 endif()
 
 
 set(SOURCE
   ${SOURCE}
-  ${GPU_LOCAL_SOURCE}
   PARENT_SCOPE
 )
 
-set(GPU_SOURCE
-  ${GPU_SOURCE}
+set(GPU_NVCC_SOURCE
+  ${GPU_NVCC_SOURCE}
   ${CMAKE_CURRENT_SOURCE_DIR}/CudaAdapter.cu
   ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapper.cu
   PARENT_SCOPE
