--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,7 +36,7 @@ set(GPU_SOURCE
 include_directories(${INCLUDE_DIRECTORIES})
 
 add_library(${CUEIRA_LIB} SHARED ${SOURCE})
-add_library(${CUEIRA_GPU_NVCC_LIB} SHARED ${SOURCE})
+add_library(${CUEIRA_GPU_LIB} SHARED ${GPU_SOURCE})
 if(NOT ${CPU})
-  cuda_add_library(${CUEIRA_GPU_NVCC_LIB} SHARED ${GPU_SOURCE})
+  cuda_add_library(${CUEIRA_GPU_NVCC_LIB} SHARED ${GPU_NVCC_SOURCE})
 endif(NOT ${CPU})
