--- a/src/cuda/CMakeLists.txt
+++ b/src/cuda/CMakeLists.txt
@@ -14,6 +14,7 @@ if(NOT ${CPU})
     ${CMAKE_CURRENT_SOURCE_DIR}/Stream.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/StreamFactory.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/KernelWrapperFactory.cpp
+    PARENT_SCOPE
   )
 endif()
 
